[package]
edition = "2021"
name = "dolphin-utilities-rust"
version = "1.0.9"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["full"] }
napi = { version = "2.1.0", default-features = false, features = ["napi4", "tokio_rt"] }
reqwest = { version = "0.11.9" }
base64 = "0.13.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
napi-derive = "2.1.0"
thiserror = "1.0.30"
zip = { version = "0.5.13", features = ["deflate"] }
glob = "0.3.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.118"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.9", features = ["winuser", "windef", "processthreadsapi"]}

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
dispatch = "0.2"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true