[package]
edition = "2021"
name = "dolphin-utilities-rust"
version = "1.1.13"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
napi = { version = "=2.1.0", default-features = false, features = ["napi4", "napi8", "tokio_rt", "serde-json"] }
reqwest = { version = "0.11.10", features = ["socks", "stream", "native-tls-vendored"] }
serde = { version = "1.0.136", features = ["serde_derive"] }
base64 = "0.13.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
napi-derive = "2.1.0"
thiserror = "1.0.30"
zip = { version = "0.5.13", features = ["deflate"] }
glob = "0.3.0"
futures-util = "0.3.21"
bytes = "1.1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.118"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.9", features = ["winuser", "windef", "processthreadsapi"]}

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
dispatch = "0.2"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true